--- a/WELA_project/index.Rmd
+++ b/WELA_project/index.Rmd
@@ -24,16 +24,16 @@ knitr::include_graphics("stock-vector-sketch-color-portrait-of-jaguar-looking.jp
 
 **WELA: Women Editors in Latin America** 
 
-Las mujeres deben escribir de ellas mismas: deben escribir sobre las mujeres y traer
+_"Las mujeres deben escribir de ellas mismas: deben escribir sobre las mujeres y traer
 a las mujeres a la escritura, de donde han sido separadas tan violentamente como
 lo han sido de sus propios cuerpos –por esas mismas razones, por la misma ley,
 con la misma meta fatal. La mujer debe ponerse ella misma dentro del texto –así
-como dentro del mismo mundo y dentro de la misma historia– por su mismo movimiento.
-Helén Cixous
+como dentro del mismo mundo y dentro de la misma historia– por su mismo movimiento"._
+__Helén Cixous__
 
 
-La palabra Wela en Mapuche se usa para indicar que se dejó de realizar una acción, o (adv.) despues. 
+La palabra Wela en Mapuche se usa para indicar que se dejó de realizar una acción, o (adv.) después. 
 
-En guarijío significa Viejita. El guarijío, es una lengua utoazteca hablada por aproximadamente 1313 personas en el noroeste de México, muchos de los cuales, especialmente mujeres, son monolingües.
+En Guarijío significa "viejita". El Guarijío, es una lengua Utoazteca hablada por aproximadamente 1313 personas en el noroeste de México, muchos de los cuales, especialmente mujeres, son monolingües.
 
 Para nosotras WELA significa frenar la desigualdad y transmitir la fuerza, sabiduria, y lucha que destellan los ojos de nuestras abuelas. 
