--- a/WELA_project/join.Rmd
+++ b/WELA_project/join.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Unete a nuestra base de datos WELA"
+title: "Únete a nuestra base de datos WELA"
 ---
 
 ¡Con un sencillo paso puedes registrarte!
