Actualización Correo electrónico y tweeter

--- a/WELA_project/about.Rmd
+++ b/WELA_project/about.Rmd
@@ -24,6 +24,7 @@ La base de datos fue una iniciativa de [Lina Caballero-Villalobos](https://www.p
 
 WELA cuenta con el apoyo de [Parent in Science Colombia](https://www.parentinsciencecol.com/equipo-de-trabajo). La base de datos es mantenida y actualizada por Lina Caballero-Villalobos.
 
+Puedes contactar con nosotros a través de nuestro correo electrónico editoraswela@gmail.com  o por nuestras redes sociales [WELA](@editorasWELA)
 
 
 
