--- a/join.Rmd
+++ b/join.Rmd
@@ -4,9 +4,9 @@ title: "Únete a nuestra base de datos WELA"
 
 ¡Con un sencillo paso puedes registrarte!
 
-Para obtener más información, también puedes contactarnos en editoraswela@gmail.com o @wela en Twitter.
+Para obtener más información puedes contactarnos en editoraswela@gmail.com o [editorasWELA](https://twitter.com/editorasWELA) en Twitter.
 
-Tenemos un espacio de trabajo de Slack para impulsar la creación de una comunidad real y formación de redes entre editoras. Si está en la base de datos pero aún no ha recibido la invitación a Slack, por favor escribános.
+Tendremos un espacio de trabajo de Slack para crear una comunidad real y formar redes entre investigadoras y porfesiones con interés en temas de edición de publicaciones científicas. Por favor escríbenos si tienes interés en participar en el Slack para enviarte la invitación.
 
 Por favor llena el siguiente formulario y empecemos un cambio [click here](https://docs.google.com/forms/d/e/1FAIpQLScuDy_4PolsRhNxopxVJltheqy7WQO7V0EflUafQ796VkY4mg/viewform).
 
