--- a/table.Rmd
+++ b/table.Rmd
@@ -49,7 +49,7 @@ datos <- dat %>%
   mutate(Name = ifelse(!is.na(Website), 
                        paste0('<a href="', Website, '"target="_blank">', `Nombre/Nome`, '</a>'),
                        `Nombre/Nome`)) %>%
-  mutate(`Posicion/Posição` = ifelse(!is.na(`¿Cuál alternativa describe mejor su cargo actual? / Qual alternativa descreve melhor sua posição atual?`), 
+  mutate(`Posición/Posição` = ifelse(!is.na(`¿Cuál alternativa describe mejor su cargo actual? / Qual alternativa descreve melhor sua posição atual?`), 
                         paste0('', `¿Cuál alternativa describe mejor su cargo actual? / Qual alternativa descreve melhor sua posição atual?`))) %>%
   
   
@@ -59,7 +59,7 @@ datos <- dat %>%
   
    dplyr::arrange(`¿Título obtenido en pregrado/licenciatura? / Qual foi o titulo obtido na graduação/ licenciatura?`) %>%
   mutate(`Estudios/Estudos` = paste(`¿Título obtenido en pregrado/licenciatura? / Qual foi o titulo obtido na graduação/ licenciatura?`,`¿Título obtenido en la Maestría? / Qual foi o titulo obtido no Mestrado?`, `¿Título obtenido en el doctorado? / Qual foi o titulo obtido no Doutorado?`, sep = ", ")) %>%
-  dplyr::select(`Nombre/Nome`, `Posicion/Posição`, `País de residencia actual / País de residência atual`,`Estudios/Estudos`, `Área de trabajo / Área de trabalho`,`Universidad/Institución/Organización/Universidade/ Instituição/Organização actual`,`Idioma/Língua`, `E-mail`, Twitter, `Palabras clave / Palavras-chave`, `Experiencia como editora/Experiência de editor`) 
+  dplyr::select(`Nombre/Nome`, `Posición/Posição`, `País de residencia actual / País de residência atual`,`Estudios/Estudos`, `Área de trabajo / Área de trabalho`,`Universidad/Institución/Organización/Universidade/ Instituição/Organização actual`,`Idioma/Língua`, `E-mail`, Twitter, `Palabras clave / Palavras-chave`, `Experiencia como editora/Experiência de editor`) 
 
 ```
 
